--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -59,4 +59,4 @@ backend noaccess
   mode http
   option httpchk HEAD /
   #errorfile 503 /etc/haproxy/no-access.htm
-  server proxy proxy:8888
+  server proxy proxy:8888 check
