--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -29,7 +29,7 @@ defaults
 frontend proxy
   mode http
   bind *:80
-  # bind *:443 ssl crt /etc/haproxy/certs/RootCA.pem
+  bind *:443 ssl crt /etc/haproxy/certs/RootCA.pem
   # Setting that redirects clients that request over non-encrypted HTTP are redirected to the HTTPS version of the site.
   # http-request redirect scheme https unless { ssl_fc }
   acl passw path_sub /panw29
